apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'jacoco'
apply plugin: 'com.bmuschko.nexus'

group = 'com.github.tonivade'
archivesBaseName = 'purejson'
version = '0.2-SNAPSHOT'

sourceCompatibility = 15
targetCompatibility = 15

buildscript {
  repositories {
    mavenCentral()
    jcenter()
  }

  dependencies {
    classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
  }
}

jacoco {
  toolVersion = '0.8.6'
}

repositories {
  mavenLocal() 
  mavenCentral()
  maven {
    url = 'https://oss.sonatype.org/content/repositories/snapshots'
  }
}

test {
  useJUnitPlatform()
  
  jvmArgs(['--enable-preview'])
}
  
tasks.withType(JavaCompile).each {
  it.options.compilerArgs.addAll('--enable-preview')
}

javadoc.options {
  addBooleanOption('-enable-preview', true)
  addStringOption('-release', '15')
}

dependencies {
  api 'com.github.tonivade:purefun-core:2.2'
  api 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
  implementation 'com.squareup:javapoet:1.12.1'
  testImplementation 'com.google.testing.compile:compile-testing:0.19'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
  testImplementation 'org.junit.platform:junit-platform-runner:1.7.0'
  testImplementation 'com.github.tonivade:purecheck:0.1'
  testImplementation 'com.github.tonivade:purefun-monad:2.2'
  testImplementation 'com.github.tonivade:purefun-instances:2.2'
  testImplementation 'com.google.code.gson:gson:2.8.6'
}

modifyPom {
  project {
    name 'PureJson'
    description 'Pure Functional Json Parser Library'
    url 'https://github.com/tonivade/purejson'
    inceptionYear '2020'

    scm {
      url 'https://github.com/tonivade/purejson'
      connection 'scm:https://github.com/tonivade/purejson.git'
      developerConnection 'scm:git://github.com/tonivade/purejson.git'
    }

    licenses {
      license {
        name 'The MIT License (MIT)'
        url 'https://github.com/tonivade/purejson/blob/master/LICENSE'
        distribution 'repo'
      }
    }

    developers {
      developer {
        id 'tonivade'
        name 'Antonio Muñoz'
        email 'antoniogmc@gmail.com'
      }
    }
  }
}

extraArchive {
  sources = true
  tests = false
  javadoc = true
}

nexus {
  sign = true
  repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
  snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
}
